# cleantools

./: .gitignore  Makefile  Makefile.icc  Makefile.in  README.md  alfa_clean.c  alfa_clean7.pro  alfa_clean8.pro  beam_test.pro  beamtest.pro  beamview2.pro  build_beam.c  build_beam5.pro  build_beam_grid2.pro  clean_test.batch  cleanflux.pro  cleanflux2.pro  cleaninit2  cleantest.pro  cleanview.pro  cleanview2.pro  configure  configure.ac  fieldview.pro  gridview2.pro  lib_version.c  link_test.pro  make_drifts.c
beams/: a1963_beams.pro  plot_alfa.pro  plot_beams.pro
beams/GALFA-2004-01/: a1963_patch.pro  fixbeam.pro  fourier.py  fourier.txt  heiles.pro
doc/: backend_guide.md  clean tools back end guide.odt  clean tools install guide.odt  clean tools structure guide.odt  clean tools users guide.odt  data_structures.md  users_guide.md
test/: beam_test.pro  clean_test.batch  clean_test2.batch  comp_test.pro  link_test.pro
